fixed overflow of about us page

--- a/www/static/index.css
+++ b/www/static/index.css
@@ -152,7 +152,7 @@ html.js,
 .js .page {
 	position: relative;
 	z-index: 5;
-	overflow: hidden;
+	overflow: auto;
 	width: 100%;
 	height: 100vh;
 	pointer-events: auto;
